// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute.
",
  "[2K[1A[2K[G[2m◼[22m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m↓[39m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G",
  "[32m✔[39m This task will execute.
[33m↓[39m This task will never execute.
",
  "[?25h",
]
`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute.
",
  "[2K[1A[2K[G[33m❯[39m This task will execute.
",
  "[2K[1A[2K[G[33m↓[39m This task will execute.
",
  "[2K[1A[2K[G[33m↓[39m I am skipping this tasks for reasons.
",
  "[2K[1A[2K[G",
  "[33m↓[39m I am skipping this tasks for reasons.
",
  "[?25h",
]
`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute.
",
  "[2K[1A[2K[G[2m◼[22m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m↓[39m I will be skipped!
",
  "[2K[1A[2K[1A[2K[G",
  "[32m✔[39m This task will execute.
[33m↓[39m I will be skipped!
",
  "[?25h",
]
`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[32m✔[39m This task will execute.
",
  "[33m❯[39m This task will never execute.
",
  "[33m↓[39m This task will never execute. [33m[SKIPPED: This task will never execute.][39m
",
]
`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[33m↓[39m This task will execute. [33m[SKIPPED: I am skipping this tasks for reasons.][39m
",
]
`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[32m✔[39m This task will execute.
",
  "[33m❯[39m This task will never execute.
",
  "[33m↓[39m This task will never execute. [33m[SKIPPED: I will be skipped!][39m
",
]
`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
  "{"event":"MESSAGE","data":{"skip":"This task will never execute."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":true,"hasFinalized":true,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
]
`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":true,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"MESSAGE","data":{"skip":"I am skipping this tasks for reasons."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":true,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
  "{"event":"MESSAGE","data":{"skip":"I will be skipped!"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":true,"hasFinalized":true,"hasSubtasks":false,"title":"This task will never execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will never execute."]}}
",
]
`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[32m[COMPLETED][39m This task will execute.
",
  "[33m[STARTED][39m This task will never execute.
",
  "[33m[SKIPPED][39m This task will never execute.
",
]
`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[33m[SKIPPED][39m I am skipping this tasks for reasons.
",
]
`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[32m[COMPLETED][39m This task will execute.
",
  "[33m[STARTED][39m This task will never execute.
",
  "[33m[SKIPPED][39m I will be skipped!
",
]
`;
